saveOrUpdate(List) calls individual create/update inside saveAll Medium The list overload calls create(obj) or update(obj) per element (each triggering saveAndFlush), then wraps everything in another saveAll. Separate the partition into new vs. existing IDs and call createBatch / updateBatch accordingly.